--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
 
 
     <div class="container-fluid">
+        <div class="header__logo footer__top-logo pt-5">
+            <?xml version="1.0"?>
+            <svg fill="#2a2a2a" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50" width="50px" height="50px">
+                <path
+                    d="M 25 0.037109375 C 24.802625 0.037109375 24.60475 0.13457812 24.53125 0.33007812 L 16.564453 21.578125 C 16.330453 22.112125 16.113297 22.636578 15.904297 23.142578 C 14.282297 27.061578 13.215469 29.654422 7.6054688 28.482422 C 7.4264687 28.445422 7.2400937 28.508437 7.1210938 28.648438 C 7.0030937 28.788438 6.9711094 28.981344 7.0371094 29.152344 C 7.6011094 30.600344 8.7736875 33.612516 7.3046875 37.353516 C 7.2306875 37.541516 7.277875 37.754531 7.421875 37.894531 C 7.567875 38.036531 7.7797969 38.075094 7.9667969 37.996094 C 8.1897969 37.901094 8.4904062 37.849609 8.8164062 37.849609 C 9.7274062 37.849609 10.641531 38.215203 11.144531 38.783203 C 12.318531 40.105203 16.625906 43.714297 22.378906 44.529297 C 22.401906 44.532297 22.424266 44.533203 22.447266 44.533203 C 22.563266 44.533203 22.677578 44.494922 22.767578 44.419922 C 22.876578 44.328922 22.940266 44.196641 22.947266 44.056641 C 22.960266 43.743641 22.968844 43.436922 22.964844 43.294922 C 22.958844 43.097922 22.835344 42.920703 22.652344 42.845703 C 19.019344 41.357703 16.114141 36.766125 17.744141 32.578125 C 18.492141 30.862125 22.643625 19.890187 24.640625 14.617188 L 25 13.662109 L 25.359375 14.615234 C 27.355375 19.887234 31.507047 30.861594 32.248047 32.558594 C 33.891047 36.777594 31.023828 41.359984 27.423828 42.833984 C 27.235828 42.910984 27.111328 43.170047 27.111328 43.373047 C 27.112328 43.699047 27.112906 43.785781 27.128906 44.050781 C 27.136906 44.190781 27.202547 44.320203 27.310547 44.408203 C 27.419547 44.496203 27.560219 44.536578 27.699219 44.517578 C 33.388219 43.711578 37.682422 40.101297 38.857422 38.779297 C 39.360422 38.212297 40.274547 37.845703 41.185547 37.845703 C 41.510547 37.845703 41.812156 37.898187 42.035156 37.992188 C 42.221156 38.071188 42.434078 38.032625 42.580078 37.890625 C 42.725078 37.750625 42.769312 37.536609 42.695312 37.349609 C 41.225313 33.609609 42.398891 30.597391 42.962891 29.150391 C 43.028891 28.979391 42.996906 28.786484 42.878906 28.646484 C 42.759906 28.506484 42.571531 28.442469 42.394531 28.480469 C 36.787531 29.651469 35.717703 27.058625 34.095703 23.140625 C 33.886703 22.633625 33.669312 22.110562 33.445312 21.601562 L 25.46875 0.33007812 C 25.39575 0.13457812 25.197375 0.037109375 25 0.037109375 z M 7.4667969 41.515625 C 7.1007969 41.654625 6.9469063 41.735547 6.6289062 41.810547 C 6.6289062 41.810547 13.363172 50.048812 25.076172 50.007812 C 37.010172 49.963813 43.371094 41.896484 43.371094 41.896484 C 43.157094 41.768484 43.005141 41.692781 42.744141 41.550781 C 36.315141 46.538781 27.495109 50.024625 25.037109 45.640625 C 23.698109 49.258625 15.293797 47.408625 7.4667969 41.515625 z" />
+            </svg>
+        </div>
         <div class="main-menu">
             <ul class="main-menu__list">
                 <li class="main-menu__item">
@@ -61,6 +68,7 @@
                 <div class="ratio-21:9">
                     <div class="ratio-body">
                         <div class="card-cat left">
+                            <div class="card-cat__bg"></div>
                             <div class="card-cat__title">رابط و تجربه کاربری</div>
                             <div class="card-cat__subtitle">User Experience & interface</div>
                             <div class="card-cat__copy"></div>
@@ -72,6 +80,7 @@
                 <div class="ratio-21:9">
                     <div class="ratio-body">
                         <div class="card-cat right">
+                            <div class="card-cat__bg"></div>
                             <div class="card-cat__title">توسعه فرانت اند</div>
                             <div class="card-cat__subtitle">Front-end web development</div>
                             <div class="card-cat__copy"></div>
@@ -81,6 +90,140 @@
             </div>
         </div>
     </div>
+
+    <!-- price -->
+
+    <div class="price">
+        <div class="container overflow-hidden">
+            <div class="price__title">
+                لیست نرخ پیاده سازی انواع وبسایت ها
+            </div>
+            <div class="price__body">
+                <div class="price__card">
+                    <div class="price__card-content">
+                        <div class="price__card-title">فروشگاهی</div>
+                        <div class="price__card-subtitle">طراحی وبسایت به بهترین شکل ممکن ، با جدیدترین فناوری های روز
+                        </div>
+                        <hr>
+                        <ul class="price__card-options">
+                            <div class="price__card-option">
+                                <i class="fa fa-check"></i>
+                                مدت زمان بسیار کم
+                            </div>
+                            <div class="price__card-option">
+                                <i class="fa fa-check"></i>
+                                کمترین هزینه
+                            </div>
+                            <div class="price__card-option">
+                                <i class="fa fa-check"></i>
+                                بهترین کیفیت ممکن
+                            </div>
+                        </ul>
+                        <div class="price__card-price">
+                            200 هزار تومان
+                        </div>
+                        <div class="price__card-btn mb-2">
+                            <button class="custom-btn btn-dark-shock w-100">
+                                <span>مشاهده بیشتر</span>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="price__card">
+                    <div class="price__card-content">
+                        <div class="price__card-title">فروشگاهی</div>
+                        <div class="price__card-subtitle">طراحی وبسایت به بهترین شکل ممکن ، با جدیدترین فناوری های روز
+                        </div>
+                        <hr>
+                        <ul class="price__card-options">
+                            <div class="price__card-option">
+                                <i class="fa fa-check"></i>
+                                مدت زمان بسیار کم
+                            </div>
+                            <div class="price__card-option">
+                                <i class="fa fa-check"></i>
+                                کمترین هزینه
+                            </div>
+                            <div class="price__card-option">
+                                <i class="fa fa-check"></i>
+                                بهترین کیفیت ممکن
+                            </div>
+                        </ul>
+                        <div class="price__card-price">
+                            200 هزار تومان
+                        </div>
+                        <div class="price__card-btn mb-2">
+                            <button class="custom-btn btn-dark-shock w-100">
+                                <span>مشاهده بیشتر</span>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="price__card">
+                    <div class="price__card-content">
+                        <div class="price__card-title">فروشگاهی</div>
+                        <div class="price__card-subtitle">طراحی وبسایت به بهترین شکل ممکن ، با جدیدترین فناوری های روز
+                        </div>
+                        <hr>
+                        <ul class="price__card-options">
+                            <div class="price__card-option">
+                                <i class="fa fa-check"></i>
+                                مدت زمان بسیار کم
+                            </div>
+                            <div class="price__card-option">
+                                <i class="fa fa-check"></i>
+                                کمترین هزینه
+                            </div>
+                            <div class="price__card-option">
+                                <i class="fa fa-check"></i>
+                                بهترین کیفیت ممکن
+                            </div>
+                        </ul>
+                        <div class="price__card-price">
+                            200 هزار تومان
+                        </div>
+                        <div class="price__card-btn mb-2">
+                            <button class="custom-btn btn-dark-shock w-100">
+                                <span>مشاهده بیشتر</span>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="price__card">
+                    <div class="price__card-content">
+                        <div class="price__card-title">فروشگاهی</div>
+                        <div class="price__card-subtitle">طراحی وبسایت به بهترین شکل ممکن ، با جدیدترین فناوری های روز
+                        </div>
+                        <hr>
+                        <ul class="price__card-options">
+                            <div class="price__card-option">
+                                <i class="fa fa-check"></i>
+                                مدت زمان بسیار کم
+                            </div>
+                            <div class="price__card-option">
+                                <i class="fa fa-check"></i>
+                                کمترین هزینه
+                            </div>
+                            <div class="price__card-option">
+                                <i class="fa fa-check"></i>
+                                بهترین کیفیت ممکن
+                            </div>
+                        </ul>
+                        <div class="price__card-price">
+                            200 هزار تومان
+                        </div>
+                        <div class="price__card-btn mb-2">
+                            <button class="custom-btn btn-dark-shock w-100">
+                                <span>مشاهده بیشتر</span>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- process -->
 
     <div class="process">
         <div class="container">
@@ -155,6 +298,45 @@
             </div>
         </div>
     </div>
+
+
+    <footer class="footer">
+        <div class="container">
+            <div class="footer__top">
+                <div class="footer__top-logo">
+                    <?xml version="1.0"?>
+                    <svg fill="#e6e6e6" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50" width="50px"
+                        height="50px">
+                        <path
+                            d="M 25 0.037109375 C 24.802625 0.037109375 24.60475 0.13457812 24.53125 0.33007812 L 16.564453 21.578125 C 16.330453 22.112125 16.113297 22.636578 15.904297 23.142578 C 14.282297 27.061578 13.215469 29.654422 7.6054688 28.482422 C 7.4264687 28.445422 7.2400937 28.508437 7.1210938 28.648438 C 7.0030937 28.788438 6.9711094 28.981344 7.0371094 29.152344 C 7.6011094 30.600344 8.7736875 33.612516 7.3046875 37.353516 C 7.2306875 37.541516 7.277875 37.754531 7.421875 37.894531 C 7.567875 38.036531 7.7797969 38.075094 7.9667969 37.996094 C 8.1897969 37.901094 8.4904062 37.849609 8.8164062 37.849609 C 9.7274062 37.849609 10.641531 38.215203 11.144531 38.783203 C 12.318531 40.105203 16.625906 43.714297 22.378906 44.529297 C 22.401906 44.532297 22.424266 44.533203 22.447266 44.533203 C 22.563266 44.533203 22.677578 44.494922 22.767578 44.419922 C 22.876578 44.328922 22.940266 44.196641 22.947266 44.056641 C 22.960266 43.743641 22.968844 43.436922 22.964844 43.294922 C 22.958844 43.097922 22.835344 42.920703 22.652344 42.845703 C 19.019344 41.357703 16.114141 36.766125 17.744141 32.578125 C 18.492141 30.862125 22.643625 19.890187 24.640625 14.617188 L 25 13.662109 L 25.359375 14.615234 C 27.355375 19.887234 31.507047 30.861594 32.248047 32.558594 C 33.891047 36.777594 31.023828 41.359984 27.423828 42.833984 C 27.235828 42.910984 27.111328 43.170047 27.111328 43.373047 C 27.112328 43.699047 27.112906 43.785781 27.128906 44.050781 C 27.136906 44.190781 27.202547 44.320203 27.310547 44.408203 C 27.419547 44.496203 27.560219 44.536578 27.699219 44.517578 C 33.388219 43.711578 37.682422 40.101297 38.857422 38.779297 C 39.360422 38.212297 40.274547 37.845703 41.185547 37.845703 C 41.510547 37.845703 41.812156 37.898187 42.035156 37.992188 C 42.221156 38.071188 42.434078 38.032625 42.580078 37.890625 C 42.725078 37.750625 42.769312 37.536609 42.695312 37.349609 C 41.225313 33.609609 42.398891 30.597391 42.962891 29.150391 C 43.028891 28.979391 42.996906 28.786484 42.878906 28.646484 C 42.759906 28.506484 42.571531 28.442469 42.394531 28.480469 C 36.787531 29.651469 35.717703 27.058625 34.095703 23.140625 C 33.886703 22.633625 33.669312 22.110562 33.445312 21.601562 L 25.46875 0.33007812 C 25.39575 0.13457812 25.197375 0.037109375 25 0.037109375 z M 7.4667969 41.515625 C 7.1007969 41.654625 6.9469063 41.735547 6.6289062 41.810547 C 6.6289062 41.810547 13.363172 50.048812 25.076172 50.007812 C 37.010172 49.963813 43.371094 41.896484 43.371094 41.896484 C 43.157094 41.768484 43.005141 41.692781 42.744141 41.550781 C 36.315141 46.538781 27.495109 50.024625 25.037109 45.640625 C 23.698109 49.258625 15.293797 47.408625 7.4667969 41.515625 z" />
+                    </svg>
+                </div>
+                <div class="main-menu">
+                    <ul class="main-menu__list">
+                        <li class="main-menu__item">
+                            <a href="" class="main-menu__link">صفحه نخست</a>
+                        </li>
+                        <li class="main-menu__item">
+                            <a href="" class="main-menu__link">درباره ما</a>
+                        </li>
+                        <li class="main-menu__item">
+                            <a href="" class="main-menu__link">تماس با ما</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer__social">
+                    <a href="#"><i class="fa fa-dribbble"></i></a>
+                    <a href="#"><i class="fa fa-facebook"></i></a>
+                    <a href="#"><i class="fa fa-github"></i></a>
+                </div>
+            </div>
+            <hr>
+            <div class="footer__down">
+                <div>تمامی حقوق سایت متعلق به همین سایت میباشد .</div>
+                <div>2019-20</div>
+            </div>
+        </div>
+    </footer>
 
     <!-- work samples -->
     <!-- <div class="work-samples">
@@ -269,18 +451,36 @@
         </div>
     </div> -->
     <!-- <script src="js/rough-notation.iife.js"></script> -->
+    <script src="js/ScrollTrigger.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.1/gsap.min.js"></script>
+    <!-- <script src="js/scrollmagic/minified/ScrollMagic.min.js"></script> -->
+    <!-- <script src="js/"></script> -->
+    <script src="js/scrollmagic/uncompressed/plugins/debug.addIndicators.js"></script>
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.1/CSSRulePlugin.min.js"></script> -->
     <script>
         // var rule = CSSRulePlugin.getRule("li:after");
         // console.log(rule)
+
+        // var controller = new ScrollMagic.Controller();
+        // new ScrollMagic.Scene({
+        //         duration: 100,
+        //         offset: 50
+        //     })
+        //     .setPin('#my-sticky-element') // pins the element for the the scene's duration
+        //     .addTo(controller); // assign the scene to the controller
 
         var tl = gsap.timeline({
             defaults: {
                 duration: 1
             }
         });
-        tl.from(".main-menu__item", {
+
+        tl.from(".header__logo.footer__top-logo", {
+                y: -50,
+                stagger: .3,
+                opacity: 0
+            })
+            .from(".main-menu__item", {
                 y: -50,
                 stagger: .3,
                 opacity: 0
@@ -297,14 +497,57 @@
                 y: -50,
                 opacity: 0
             })
-            .from(".card-cat.left", {
-                x: 1000,
-                opacity: 0
-            }, '-=1.5')
-            .from(".card-cat.right", {
-                x: -1000,
-                opacity: 0
-            }, '-=1.5')
+            // .from(".card-cat.left", {
+            //     x: 1000,
+            //     opacity: 0
+            // }, '-=1.5')
+            // .from(".card-cat.right", {
+            //     x: -1000,
+            //     opacity: 0
+            // }, '-=1.5')
+            .from(".card-cat__bg", {
+                scrollTrigger: {
+                    trigger: ".category",
+                    start: 'top center',
+                    markers: true
+                },
+                height: 0,
+                duration: 5
+            })
+            .from(".price__card", {
+                scrollTrigger: {
+                    trigger: ".price__card",
+                },
+                x: -200,
+                opacity: 0,
+                stagger: .3,
+            }, '-=2')
+        // .from(".process", {
+        //     // scrollTrigger: {
+        //     //     trigger: ".process",
+        //     // },
+        //     // x: -200,
+        //     opacity: 0,
+        //     // stagger: .3,
+        //     duration: 5
+        // }, '-=2.5')
+        // .to(".price__card", {
+        //     scrollTrigger: {
+        //         trigger: ".price__card",
+        //     },
+        //     x: -200,
+        //     opacity: 0,
+        //     stagger: .3,
+        // }, '-=1.5')
+
+        // scrollTrigger: {
+        //     trigger: ".b",
+        //     start: "top center",
+        //     end: "top 100px",
+        //     scrub: true,
+        //     markers: true,
+        //     id: "scrub"
+        // }
         // .from(".blob", {
         //     opacity: 0,
         //     width:50,
